[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/map_graph_editor/map_portal_text_edit.gd" type="Script" id=1]
[ext_resource path="res://addons/map_graph_editor/map_portal.gd" type="Script" id=2]
[ext_resource path="res://addons/map_graph_editor/fonts/map_portal_id_font.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Image" id=7]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=6]
flags = 4
flags = 4
image = SubResource( 7 )
size = Vector2( 16, 16 )

[node name="MapPortal_0" type="HBoxContainer"]
margin_left = 1.0
margin_top = 225.0
margin_right = 131.0
margin_bottom = 249.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="."]
visible = false
margin_right = 4.0
margin_bottom = 24.0
custom_styles/separator = SubResource( 3 )

[node name="TextureRectIcon" type="TextureRect" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_bottom = 24.0
texture = SubResource( 6 )
stretch_mode = 6

[node name="Label" type="Label" parent="."]
margin_top = 3.0
margin_right = 14.0
margin_bottom = 20.0
rect_min_size = Vector2( 14, 0 )
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 18.0
margin_right = 76.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
context_menu_enabled = false
placeholder_text = "portal name"
script = ExtResource( 1 )

[node name="DisconnectButton" type="Button" parent="."]
margin_left = 80.0
margin_right = 108.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
toggle_mode = true
pressed = true
icon = SubResource( 6 )

[node name="ReverseButton" type="Button" parent="."]
margin_left = 112.0
margin_right = 140.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
toggle_mode = true
icon = SubResource( 6 )

[node name="Panel" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 114.0
margin_right = 130.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2

[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="toggled" from="ReverseButton" to="." method="_on_ReverseButton_toggled"]
